--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "webpack serve",
+    "start": "start http://localhost:8000/ & webpack --watch & webpack-dev-server --inline --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
